--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -3,16 +3,20 @@
 # Miscellaneous {{{
 # allow mouse use
 set-option -g mouse on
-# Set the terminal's color capability to 256 colors. TMUX will then set its $TERM environment variable to this value.
+# Set the terminal's color capability to 256 colors. TMUX will then set its
+# $TERM environment variable to this value.
 set -g default-terminal "tmux-256color"
-# By default TMUX uses a login shell which I don't want since I've already run the login shell by
-# the time I launch TMUX and running it again was causing the $PATH to get messed up. More on how it
-# was messed up (TLDR: macOS moves its $PATH entries to the front if you rerun its path_helper):
+# By default TMUX uses a login shell which I don't want since I've already run
+# the login shell by the time I launch TMUX and running it again was causing the
+# $PATH to get messed up. More on how it was messed up (TLDR: macOS moves its
+# $PATH entries to the front if you rerun its path_helper):
 # https://gist.github.com/Linerre/f11ad4a6a934dcf01ee8415c9457e7b2#what-does-it-break
 set -g default-command "default-shell"
-# don't allow programs running in a pane to change the window title with an escape sequence
+# don't allow programs running in a pane to change the window title with an
+# escape sequence
 set-option -g allow-rename off
-# Let tmux automatically rename windows, unless I manually set a name for that window
+# Let tmux automatically rename windows, unless I manually set a name for that
+# window
 set -g automatic-rename on
 set -g automatic-rename-format '#{pane_title}'
 set-option -g renumber-windows on
@@ -24,15 +28,17 @@ set -g pane-border-format '#{?#{m/r:copy-mode,#{pane_mode}},#[fg=terminal align=
 set-option -g display-time 2000
 set-option -g set-titles on
 set-option -g set-titles-string '#T'
-# When a client becomes active, run attach-session which will update the environment
+# When a client becomes active, run attach-session which will update the
+# environment
 set-hook -g client-active attach-session
 set-option -g allow-passthrough all
-# The output from ':checkhealth' in neovim says 'autoread' might not work if this isn't set.
+# The output from ':checkhealth' in neovim says 'autoread' might not work if
+# this isn't set.
 set-option -g focus-events on
 set-option -g detach-on-destroy off
-# This seems like a reasonable value, based on the discussions here on a new default:
-# https://github.com/tmux/tmux/issues/3844
-# They settled on 10, but that caused issue for me in vscode so I'm keeping 15
+# This seems like a reasonable value, based on the discussions here on a new
+# default: https://github.com/tmux/tmux/issues/3844 They settled on 10, but that
+# caused issue for me in vscode so I'm keeping 15
 set -s escape-time 15
 
 # Enable all terminal features
@@ -49,17 +55,17 @@ set -ga terminal-features "*:usstyle"
 set -g mode-style "reverse"
 set -g fill-character '╱'
 
-# Clipboard copying
-# This means tmux will set the external clipboard when text is copied in copy-mode and allows programs running inside
-# tmux to set it as well. For more info:
-# https://github.com/tmux/tmux/wiki/Clipboard
+# Clipboard copying This means tmux will set the external clipboard when text
+# is copied in copy-mode and allows programs running inside tmux to set it as
+# well. For more info: https://github.com/tmux/tmux/wiki/Clipboard
 set -g set-clipboard on
 
 set-option -g status-keys emacs
 
-# In emacs mode, when selecting text from left to right, the last character won't be copied
-# since that's how it works in emacs. I'm using vi mode because I find that behavior unintuitive.
-# See: https://github.com/tmux/tmux/issues/3139
+# In emacs mode, when selecting text from left to right, the last
+# character won't be copied since that's how it works in emacs. I'm
+# using vi mode because I find that behavior unintuitive.  See:
+# https://github.com/tmux/tmux/issues/3139
 set-option -g mode-keys vi
 
 set-option -g history-limit 50000
@@ -78,8 +84,9 @@ bind -n M-t new-window -c "#{pane_current_path}"
 # reload
 bind -n M-r run-shell -b 'tmux-config-reload'
 
-# Open the url under the cursor in the browser. My terminal can do this, but it doesn't work when
-# the url spans multiple lines in a tmux pane, since my terminal is not aware of the tmux pane boundaries.
+# Open the url under the cursor in the browser. My terminal can do this, but
+# it doesn't work when the url spans multiple lines in a tmux pane, since my
+# terminal is not aware of the tmux pane boundaries.
 bind-key -T copy-mode C-MouseUp1Pane select-pane \; run-shell 'tmux-click-url "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" "#{pane_width}" 2>&1' \; send-keys -M
 bind-key -T copy-mode-vi C-MouseUp1Pane select-pane \; run-shell 'tmux-click-url "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" "#{pane_width}" 2>&1' \; send-keys -M
 bind-key -T root C-MouseUp1Pane select-pane -t = \; run-shell 'tmux-click-url "#{mouse_x}" "#{mouse_y}" "#{pane_current_command}" "#{scroll_position}" "#{mouse_hyperlink}" "#{pane_width}" 2>&1' \; send-keys -M
@@ -228,55 +235,60 @@ set -g @scroll-speed-num-lines-per-scroll '1'
 
 # tmux-resurrect: Saves the state of tmux to a file so it can be restored later
 #
-# TODO: I want to restore any arguments that were passed to neovim, but the problem is that the Nix
-# wrapper for neovim calls the actual neovim binary with arguments that contain spaces. The only
-# platform where resurrect can retain spaces in arguments, without splitting them into separate
-# arguments, is Linux with the 'linux_procfs' strategy. So here I only set arguments to be replaced
-# if I'm on Linux. issue: https://github.com/tmux-plugins/tmux-resurrect/issues/60
+# TODO: I want to restore any arguments that were passed to neovim, but
+# the problem is that the Nix wrapper for neovim calls the actual neovim
+# binary with arguments that contain spaces. The only platform where
+# resurrect can retain spaces in arguments, without splitting them into
+# separate arguments, is Linux with the 'linux_procfs' strategy. So
+# here I only set arguments to be replaced if I'm on Linux. issue:
+# https://github.com/tmux-plugins/tmux-resurrect/issues/60
 set -g @nvim_resurrect '"~nvim->nvim"'
 if-shell "uname | grep -q Linux" {
-    # TODO: Restoring commands with spaces is not working on Linux, though it should with procfs as
-    # the restore strategy. Until it's fixed, I will not restore arguments on Linux either for the
-    # reason in the TODO above.
+    # TODO: Restoring commands with spaces is not working on Linux, though it
+    # should with procfs as the restore strategy. Until it's fixed, I will not
+    # restore arguments on Linux either for the reason in the TODO above.
     set -g @nvim_resurrect '"~nvim->nvim"'
 }
 # "~sh" is to match "/bin/sh <path_to_man> <manpage>"
 set -gF @resurrect-processes 'watch viddy #{@nvim_resurrect} ssh autossh man ~sh less tail fzf cloudflared "~nix repl->nix repl" gitui "git ui"'
-# This strategy can restore quotes on the commandline so that the spaces in arguments are retained.
-# e.g. `echo 'one argument with spaces'`. Only supports linux though
+# This strategy can restore quotes on the commandline so that the spaces in
+# arguments are retained. e.g. `echo 'one argument with spaces'`. Only supports
+# linux though
 if-shell "uname | grep -q Linux" "set -g @resurrect-save-command-strategy 'linux_procfs'"
 set -g @resurrect-capture-pane-contents 'on'
 
 # tmux-mode-indicator
 set -g @mode_indicator_empty_prompt '#[range=right bg=default fg=colour8 align=right] #S'
 set -g @mode_indicator_prefix_prompt "#[bold bg=default fg=terminal align=right blink]󰌌  PREFIX MODE"
-# I have an indicator for this embedded in the border of the pane in copy-mode so I don't need one
-# here
+# I have an indicator for this embedded in the border of the pane in copy-mode
+# so I don't need one here
 set -gF @mode_indicator_copy_prompt '#{@mode_indicator_empty_prompt}'
 # I have an indicator for this next to the window name so I don't need one here
 set -gF @mode_indicator_sync_prompt '#{@mode_indicator_empty_prompt}'
 
 # tmux-suspend
 set -g @suspend_key 'M-z'
-# I prepend pane-border-format instead of overwriting it so if two windows are in a mode (e.g. copy
-# and suspended), or one window is in two modes, both border indicators will be displayed.
+# I prepend pane-border-format instead of overwriting it so if two windows are
+# in a mode (e.g. copy and suspended), or one window is in two modes, both
+# border indicators will be displayed.
 #
-# The `#{l:}` is so the formats inside of it don't get evaluated when this variable is set. This way
-# if the active pane changes, the suspended icon will move to the newly active pane.
+# The `#{l:}` is so the formats inside of it don't get evaluated when this
+# variable is set. This way if the active pane changes, the suspended icon will
+# move to the newly active pane.
 set -g @suspend_suspended_options " \
     pane-border-status::off, \
     status::off, \
 "
 
-# tmux-continuum: Uses tmux-resurrect to continuously save the current tmux session at a specified
-# interval.
+# tmux-continuum: Uses tmux-resurrect to continuously save the current tmux
+# session at a specified interval.
 set -g @continuum-restore 'on' # Automatically restore session when tmux is started
 set -g @continuum-save-interval '1' # measured in minutes
 
 # tmux-sidebar
 set -g @sidebar-tree 'e'
-# The `rm` removes any existing broot socket files since broot won't work if the socket file already
-# exists.
+# The `rm` removes any existing broot socket files since broot won't work if the
+# socket file already exists.
 # TODO: broot should delete the socket file when it closes
 # TODO: Add this, and the fish code, to the broot wiki
 bind-key -n M-e if-shell "#{@is_vim}" 'send-keys M-e' \
