--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -276,7 +276,7 @@ set -g @suspend_key 'M-z'
 # variable is set. This way if the active pane changes, the suspended icon will
 # move to the newly active pane.
 set -g @suspend_suspended_options " \
-    pane-border-status::off, \
+    pane-border-format::#[align=centre] 󰒲  suspended , \
     status::off, \
 "
 
