--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -158,7 +158,7 @@ bind-key -T root MouseUp1StatusRight \
         "Rename Session" r { command-prompt -I "#S" { rename-session "%%" } } \
         "Choose Session" c { choose-tree -Zs } \
         "Copy Mode" y { copy-mode } \
-        "Pane Sync Mode" p { setw synchronize-panes }
+        "Pane Sync Mode" = { setw synchronize-panes }
 
 bind '|' split-window -h -c '#{pane_current_path}'
 bind '-' split-window -v -c '#{pane_current_path}'
@@ -167,6 +167,8 @@ bind-key -n M-s choose-tree -Zs
 # reduce scroll speed in copy mode
 bind-key -T copy-mode-vi WheelUpPane send-keys -X scroll-up \; send-keys -X scroll-up
 bind-key -T copy-mode-vi WheelDownPane send-keys -X scroll-down \; send-keys -X scroll-down
+
+bind-key -n M-= set-window-option synchronize-panes
 # }}}
 
 # Aesthetics {{{
@@ -198,7 +200,7 @@ set -g message-style "bg=#{@bgcolor},fg=#{@standoutcolor}"
 # Bars
 set -g status-interval 1
 set -g status on
-set -g @accentcolor 'colour2'
+set -g @accentcolor 'colour14'
 set -g @fgcolor 'terminal'
 set -g @bgcolor2 'colour8'
 set-hook -g client-focus-out "set -g @accentcolor 'colour8'; set -g @fgcolor 'colour8'"
