--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,6 @@
 # shellcheck shell=bash
 
+# nix
 if ! has nix_direnv_version || ! nix_direnv_version 3.0.4; then
   source_url \
     "https://raw.githubusercontent.com/nix-community/nix-direnv/3.0.4/direnvrc" \
@@ -8,10 +9,15 @@ fi
 nix_direnv_manual_reload
 use flake
 watch_file "$PWD/flake-modules/dev-shell.nix"
-
-# I want to use my nix wrapper so I need to prepend my bin after the flake bin is added.
+# I want to use my nix wrapper so I need to prepend my bin after the flake bin
+# is added. I first try to remove the path before adding it so I don't duplicate
+# it.
 PATH_rm ~/.local/bin
 PATH_add ~/.local/bin
+
+# go
+export GOPATH="$PWD/.go-path"
+export PATH="$GOPATH/bin:$PATH"
 
 # secrets
 yellow='\e[33m'
