--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -11,7 +11,7 @@ set -g default-terminal "tmux-256color"
 # $PATH to get messed up. More on how it was messed up (TLDR: macOS moves its
 # $PATH entries to the front if you rerun its path_helper):
 # https://gist.github.com/Linerre/f11ad4a6a934dcf01ee8415c9457e7b2#what-does-it-break
-set -g default-command "default-shell"
+set -g default-command "default-command"
 # don't allow programs running in a pane to change the window title with an
 # escape sequence
 set-option -g allow-rename off
