--- a/.envrc
+++ b/.envrc
@@ -1,6 +1,7 @@
 # shellcheck shell=bash
 
 # nix
+nix_wrapper_path="$(dirname "$(which nix)")"
 if ! has nix_direnv_version || ! nix_direnv_version 3.0.4; then
   source_url \
     "https://raw.githubusercontent.com/nix-community/nix-direnv/3.0.4/direnvrc" \
@@ -9,11 +10,11 @@ fi
 nix_direnv_manual_reload
 use flake
 watch_file "$PWD/flake-modules/dev-shell.nix"
-# I want to use my nix wrapper so I need to prepend my bin after the flake bin
-# is added. I first try to remove the path before adding it so I don't duplicate
-# it.
-PATH_rm ~/.local/bin
-PATH_add ~/.local/bin
+# I want to use my nix wrapper so I need to prepend it to the PATH after the
+# flake bin is added. I first try to remove it from the PATH so there are not
+# duplicates.
+PATH_rm "$nix_wrapper_path"
+PATH_add "$nix_wrapper_path"
 
 # go
 export GOPATH="$PWD/.go-path"
