--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -160,8 +160,8 @@ bind-key -T root MouseUp1StatusRight \
         "Copy Mode" y { copy-mode } \
         "Pane Sync Mode" = { setw synchronize-panes }
 
-bind '|' split-window -h -c '#{pane_current_path}'
-bind '-' split-window -v -c '#{pane_current_path}'
+bind -n M-\\ split-window -h -c '#{pane_current_path}'
+bind -n M-\- split-window -v -c '#{pane_current_path}'
 bind-key -n M-s choose-tree -Zs
 
 # reduce scroll speed in copy mode
@@ -235,30 +235,6 @@ set -g @scroll-without-changing-pane "on"
 set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
 set -g @scroll-speed-num-lines-per-scroll '1'
 
-# tmux-resurrect: Saves the state of tmux to a file so it can be restored later
-#
-# TODO: I want to restore any arguments that were passed to neovim, but
-# the problem is that the Nix wrapper for neovim calls the actual neovim
-# binary with arguments that contain spaces. The only platform where
-# resurrect can retain spaces in arguments, without splitting them into
-# separate arguments, is Linux with the 'linux_procfs' strategy. So
-# here I only set arguments to be replaced if I'm on Linux. issue:
-# https://github.com/tmux-plugins/tmux-resurrect/issues/60
-set -g @nvim_resurrect '"~nvim->nvim"'
-if-shell "uname | grep -q Linux" {
-    # TODO: Restoring commands with spaces is not working on Linux, though it
-    # should with procfs as the restore strategy. Until it's fixed, I will not
-    # restore arguments on Linux either for the reason in the TODO above.
-    set -g @nvim_resurrect '"~nvim->nvim"'
-}
-# "~sh" is to match "/bin/sh <path_to_man> <manpage>"
-set -gF @resurrect-processes 'watch viddy #{@nvim_resurrect} ssh autossh man ~sh less tail fzf cloudflared "~nix repl->nix repl"'
-# This strategy can restore quotes on the commandline so that the spaces in
-# arguments are retained. e.g. `echo 'one argument with spaces'`. Only supports
-# linux though
-if-shell "uname | grep -q Linux" "set -g @resurrect-save-command-strategy 'linux_procfs'"
-set -g @resurrect-capture-pane-contents 'on'
-
 # tmux-mode-indicator
 set -g @mode_indicator_empty_prompt '#[range=right bg=default fg=colour8 align=right] #S'
 set -g @mode_indicator_prefix_prompt "#[bold bg=default fg=terminal align=right blink]󰌌  PREFIX MODE"
@@ -281,11 +257,6 @@ set -g @suspend_suspended_options " \
     pane-border-format::#[align=centre] 󰒲  suspended , \
     status::off, \
 "
-
-# tmux-continuum: Uses tmux-resurrect to continuously save the current tmux
-# session at a specified interval.
-set -g @continuum-restore 'on' # Automatically restore session when tmux is started
-set -g @continuum-save-interval '1' # measured in minutes
 
 # tmux-sidebar
 set -g @sidebar-tree 'e'
