configure macOS system shortcuts

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -264,7 +264,7 @@ set -g @sidebar-tree 'e'
 # socket file already exists.
 # TODO: broot should delete the socket file when it closes
 # TODO: Add this, and the fish code, to the broot wiki
-bind-key -n M-e if-shell "#{@is_vim}" 'send-keys M-e' \
+bind-key -n M-E if-shell "#{@is_vim}" 'send-keys M-E' \
   { \
     run-shell "$TMUX_PLUGIN_MANAGER_PATH"'tmux-sidebar/scripts/toggle.sh '"'"'rm /tmp/broot*; broot --conf "${XDG_CONFIG_HOME:-$HOME/.config}/broot/explorer-conf.hjson;${XDG_CONFIG_HOME:-$HOME/.config}/broot/conf.hjson" --listen #{pane_id},left,50'"'"' #{q:pane_id}' \
   }
