--- a/dotfiles/direnv/direnv.toml
+++ b/dotfiles/direnv/direnv.toml
@@ -5,4 +5,4 @@
   hide_env_diff = true
 
 [whitelist]
-prefix = [ "~/.dotfiles", "~/code/bigolu.github.io", "~/code/practice", ]
+prefix = [ "~/code/system-configurations", "~/code/bigolu.github.io", "~/code/practice", ]
