chore: upgrade tools

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -3,9 +3,25 @@
 # Miscellaneous {{{
 # allow mouse use
 set-option -g mouse on
-# Set the terminal's color capability to 256 colors. TMUX will then set its
-# $TERM environment variable to this value.
+# This sets the $TERM value
 set -g default-terminal "tmux-256color"
+# neovim is failing to detect truecolor support when I'm inside a nested
+# tmux session e.g. tmux in a local and remote host. This is the PR that
+# introduces the detection[1].I think the reason it can't is because the
+# tmux-256color terminfo doesn't advertise truecolor support. Though I do set
+# `terminal-features` to add truecolor (RGB) unconditionally so I'm not sure why
+# that doesn't fix this.
+#
+# TODO: I need to figure why exactly neovim detection is failing. Maybe tmux
+# should add truecolor to tmux-256color, they did for tmux-direct[2]. I tried to
+# use tmux-direct, but it messed with my ANSI colors 8-15.
+#
+# neovim also checks COLORTERM to detect truecolor support so I'll just set
+# that for now.
+#
+# [1]: https://github.com/neovim/neovim/pull/26407
+# [2]: https://github.com/tmux/tmux/issues/2370
+set-environment -g COLORTERM truecolor
 # By default TMUX uses a login shell which I don't want since I've already run
 # the login shell by the time I launch TMUX and running it again was causing the
 # $PATH to get messed up. More on how it was messed up (TLDR: macOS moves its
@@ -39,7 +55,7 @@ set-option -g detach-on-destroy off
 # This seems like a reasonable value, based on the discussions here on a new
 # default: https://github.com/tmux/tmux/issues/3844 They settled on 10, but that
 # caused issue for me in vscode so I'm keeping 15
-set -s escape-time 15
+set -s escape-time 25
 
 # Enable all terminal features
 set -ga terminal-features "*:hyperlinks"
