--- a/.github/workflows/cache-build-results.yml
+++ b/.github/workflows/cache-build-results.yml
@@ -19,9 +19,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        # TODO: yabai won't build with macos-latest, which is currently an alias
-        # to macos-12
-        os: [ubuntu-latest, macos-11]
+        # macos-latest uses M1 so I'll just use the most recent version of macOS
+        # that they still on run intel macs
+        os: [ubuntu-latest, macos-13]
       fail-fast: false
     steps:
       - uses: actions/checkout@v4
