--- a/.github/workflows/publish-shell-executable.yml
+++ b/.github/workflows/publish-shell-executable.yml
@@ -36,7 +36,7 @@ jobs:
         # https://github.com/nix-community/home-manager/issues/4692
         # https://github.com/NixOS/nix/issues/9579
         with:
-          nix-installer-tag: v0.13.1
+          source-tag: v0.13.1
       - uses: cachix/cachix-action@v14
         with:
           name: bigolu
