--- a/.github/workflows/cache-build-results.yml
+++ b/.github/workflows/cache-build-results.yml
@@ -34,6 +34,13 @@ jobs:
         # https://github.com/NixOS/nix/issues/9579
         with:
           source-tag: v0.13.1
+      - uses: cachix/cachix-action@v14
+        with:
+          name: bigolu
+          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+          # TODO: This isn't working right now:
+          # https://github.com/cachix/cachix-action/issues/169
+          useDaemon: false
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - run: NIXPKGS_ALLOW_UNFREE=1 nix run --show-trace .#nix -- build --impure --show-trace
         working-directory: "code/system-configurations"
