--- a/.envrc
+++ b/.envrc
@@ -2,9 +2,7 @@
 
 # nix
 nix_wrapper_path="$(dirname "$(which nix)")"
-if ! has nix_direnv_version || ! nix_direnv_version 3.0.5; then
-  source_url "https://raw.githubusercontent.com/nix-community/nix-direnv/3.0.5/direnvrc" "sha256-RuwIS+QKFj/T9M2TFXScjBsLR6V3A17YVoEW/Q6AZ1w="
-fi
+source_url "https://raw.githubusercontent.com/nix-community/nix-direnv/3.0.5/direnvrc" "sha256-RuwIS+QKFj/T9M2TFXScjBsLR6V3A17YVoEW/Q6AZ1w="
 nix_direnv_manual_reload
 use flake
 watch_file "$PWD/flake-modules/dev-shell.nix"
@@ -14,9 +12,7 @@ watch_file "$PWD/flake-modules/dev-shell.nix"
 PATH_rm "$nix_wrapper_path"
 PATH_add "$nix_wrapper_path"
 
-# go
-export GOPATH="$PWD/.go-path"
-export PATH="$GOPATH/bin:$PATH"
+layout go
 
 # secrets
 yellow='\e[33m'
