--- a/.github/workflows/gomod2nix.yml
+++ b/.github/workflows/gomod2nix.yml
@@ -16,9 +16,7 @@ jobs:
       contents: write
     strategy:
       matrix:
-        # macos-latest uses M1 so I'll just use the most recent version of macOS
-        # that they still on run intel macs
-        os: [ubuntu-latest, macos-13]
+        os: [ubuntu-latest]
     defaults:
       run:
         working-directory: "code/system-configurations"
