--- a/.envrc
+++ b/.envrc
@@ -1,8 +1,10 @@
 # shellcheck shell=bash
 
+# Dependencies
+source_url 'https://raw.githubusercontent.com/nix-community/nix-direnv/3.0.4/direnvrc' 'sha256-DzlYZ33mWF/Gs8DDeyjr8mnVmQGx7ASYqA5WlxwvBG4='
+
 # nix
 nix_wrapper_path="$(dirname "$(which nix)")"
-source_url "https://raw.githubusercontent.com/nix-community/nix-direnv/3.0.4/direnvrc" "sha256-DzlYZ33mWF/Gs8DDeyjr8mnVmQGx7ASYqA5WlxwvBG4="
 nix_direnv_manual_reload
 use flake
 watch_file "$PWD/flake-modules/dev-shell.nix"
