--- a/.github/workflows/fixup-renovate-pr-for-envrc.yml
+++ b/.github/workflows/fixup-renovate-pr-for-envrc.yml
@@ -1,8 +1,8 @@
-name: gomod2nix
+name: Fix-Up Renovate's Pull Request for .envrc
 on:
   push:
     branches:
-      - "renovate/golang/**"
+      - "renovate/envrc/**"
 env:
   # The checkout action clones the repository relative to github.workspace. I
   # set $HOME to github.workspace so that the directory structure matches that
@@ -35,5 +35,5 @@ jobs:
           # TODO: This isn't working right now:
           # https://github.com/cachix/cachix-action/issues/169
           useDaemon: false
-      - run: nix shell --impure nixpkgs#fish nixpkgs#direnv --command fish --command 'direnv hook fish | source; direnv allow; direnv exec "$PWD" nix-direnv-reload; just direnv exec "$PWD" "just gomod2nix"'
+      - run: nix shell --impure nixpkgs#fish nixpkgs#direnv --command fish --command 'direnv hook fish | source; direnv allow; direnv exec "$PWD" nix-direnv-reload; just direnv exec "$PWD" "just fixup-renovate-pull-request-for-envrc"'
       - uses: stefanzweifel/git-auto-commit-action@v5
