--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,67 +1,82 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "nix": {
-    "enabled": true
-  },
-  "gomod": {
-    "pinDigests": true,
-  },
-  "postUpdateOptions": [
-    "gomodTidy",
-    "gomodMassage"
-  ],
-  "extends": [
-    "config:best-practices",
-    "schedule:weekends",
-    "schedule:automergeWeekends",
-  ],
-  separateMajorMinor: true,
-  separateMultipleMajor: true,
-  "lockFileMaintenance": {
-    "enabled": true,
-    "schedule": [
-      "every weekend",
+    $schema: "https://docs.renovatebot.com/renovate-schema.json",
+    nix: {
+        enabled: true,
+    },
+    gomod: {
+        pinDigests: true,
+    },
+    postUpdateOptions: [
+        "gomodTidy",
+        "gomodMassage",
     ],
-  },
-  "packageRules": [
-    {
-      "matchUpdateTypes": ["minor", "patch"],
-      // Don't auto-merge if the major version is 0, in which case a minor/patch
-      // update _can_ be a breaking change.
-      "matchCurrentVersion": "!/^0/",
-      "automerge": true,
-      "automergeType": "branch",
+    extends: [
+        "config:best-practices",
+        "schedule:weekends",
+        "schedule:automergeWeekends",
+    ],
+    separateMajorMinor: true,
+    separateMultipleMajor: true,
+    lockFileMaintenance: {
+        enabled: true,
+        schedule: [
+            "every weekend",
+        ],
     },
-    {
-      "matchManagers": ["gomod",],
-      // So I can run `gomod2nix`
-      "additionalBranchPrefix": "golang/",
+    packageRules: [
+        {
+            matchUpdateTypes: [
+                "minor",
+                "patch",
+            ],
+
+            // Don't auto-merge if the major version is 0, in which case a minor/patch
+            // update _can_ be a breaking change.
+            matchCurrentVersion: "!/^0/",
+            automerge: true,
+            automergeType: "branch",
+        },
+        {
+            matchManagers: [
+                "gomod",
+            ],
+
+            // So I can run `gomod2nix`
+            additionalBranchPrefix: "golang/",
+        },
+
+        // By default, indirect Go dependencies aren't updated
+        {
+            matchManagers: [
+                "gomod",
+            ],
+            matchDepTypes: [
+                "indirect",
+            ],
+            enabled: true,
+        },
+    ],
+    osvVulnerabilityAlerts: true,
+    vulnerabilityAlerts: {
+        labels: [
+            "security",
+        ],
+
+        // Don't automerge, it may be wrong:
+        // https://docs.renovatebot.com/configuration-options/#vulnerabilityalerts
+        automerge: false,
     },
-    // By default, indirect Go dependencies aren't updated
-    {
-      "matchManagers": ["gomod"],
-      "matchDepTypes": ["indirect"],
-      "enabled": true
-    },
-  ],
-  "osvVulnerabilityAlerts": true,
-  "vulnerabilityAlerts": {
-    "labels": ["security"],
-    // Don't automerge, it may be wrong:
-    // https://docs.renovatebot.com/configuration-options/#vulnerabilityalerts
-    "automerge": false,
-  },
-  "customManagers": [
-    {
-      "customType": "regex",
-      "datasourceTemplate": "github-releases",
-      "depNameTemplate": "nix-community/nix-direnv",
-      "fileMatch": [
-        "(^|/)\.envrc$",
-      ],
-      "matchStrings": [
-        '[\'"]https:\\\/\\\/raw\\.githubusercontent\\.com\\\/nix-community\\\/nix-direnv\\\/(?<currentValue>.+)\\\/direnvrc[\'"]',
-      ],
-    }
-  ]
+    customManagers: [
+        {
+            customType: "regex",
+            datasourceTemplate: "github-releases",
+            depNameTemplate: "nix-community/nix-direnv",
+            fileMatch: [
+                "(^|/)\.envrc$",
+            ],
+            matchStrings: [
+                '[\'"]https:\\\/\\\/raw\\.githubusercontent\\.com\\\/nix-community\\\/nix-direnv\\\/(?<currentValue>.+)\\\/direnvrc[\'"]',
+            ],
+        },
+    ],
 }
