--- a/.github/workflows/fixup-renovate-pr-for-envrc.yml
+++ b/.github/workflows/fixup-renovate-pr-for-envrc.yml
@@ -9,7 +9,7 @@ env:
   # of the machine I tested this on.
   HOME: ${{ github.workspace }}
 jobs:
-  tests:
+  fix-envrc:
     runs-on: ubuntu-latest
     permissions:
       # Needed for git-auto-commit-action
@@ -35,5 +35,5 @@ jobs:
           # TODO: This isn't working right now:
           # https://github.com/cachix/cachix-action/issues/169
           useDaemon: false
-      - run: nix shell --impure nixpkgs#fish nixpkgs#direnv --command fish --command 'direnv hook fish | source; direnv allow; direnv exec "$PWD" nix-direnv-reload; just direnv exec "$PWD" just fixup-renovate-pull-request-for-envrc'
+      - run: nix shell --impure nixpkgs#fish nixpkgs#direnv --command fish --command 'direnv hook fish | source; direnv allow; direnv exec "$PWD" nix-direnv-reload; direnv exec "$PWD" just fixup-renovate-pull-request-for-envrc'
       - uses: stefanzweifel/git-auto-commit-action@v5
