--- a/.lefthook.yml
+++ b/.lefthook.yml
@@ -15,6 +15,7 @@ output: false
 pre-commit:
   piped: true
   commands:
+    # Code generators
     generate-readme-table-of-contents:
       priority: 1
       glob: "README.md"
@@ -25,15 +26,31 @@ pre-commit:
       run: DIRENV_LOG_FORMAT='' direnv exec "$PWD" just generate-neovim-plugin-list
     go-mod-tidy:
       priority: 1
-      glob: "*gozip/*"
+      glob: "*gozip/go.mod"
       run: DIRENV_LOG_FORMAT='' direnv exec "$PWD" just go-mod-tidy
+    gomod2nix:
+      priority: 1
+      glob: "*gozip/go.mod"
+      run: DIRENV_LOG_FORMAT='' direnv exec "$PWD" just gomod2nix
+
+    # Formatters. Change their priority so we format code after all the code
+    # generators have run
     format:
       priority: 2
-      run: DIRENV_LOG_FORMAT='' direnv exec "$PWD" just format
-    format-no-cache:
-      priority: 3
+      run: DIRENV_LOG_FORMAT='' direnv exec "$PWD" just format {staged_files}
+      interactive: true
+    format-all:
+      priority: 2
       glob: "{.stylua.toml,.editorconfig,treefmt.toml}"
-      run: DIRENV_LOG_FORMAT='' direnv exec "$PWD" just format-no-cache
+      run: DIRENV_LOG_FORMAT='' direnv exec "$PWD" just format
+      interactive: true
+
+    # Linters. Change the priority so we lint the code after all code generation
+    # and formatting has run, in the unlikely event that they cause a lint
+    # error.
+    lint:
+      priority: 3
+      run: DIRENV_LOG_FORMAT='' direnv exec "$PWD" just lint {staged_files}
 
 post-merge:
   scripts:
